Change the analyser